complete authorization middleware, add swagger documentation
