# swagger_output.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.0",
+    "version": "1.8.3",
     "title": "Customer API",
     "description": "Customer API Information",
     "contact": {
@@ -13,9 +13,18 @@
   "basePath": "/",
   "tags": [],
   "schemes": [
-    "http",
-    "https"
+    "http"
   ],
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "description": "Value: bearerAuth {jwt}",
+      "in": "header",
+      "name": "auth-token",
+      "scheme": "bearer",
+      "bearerFormat": "JWT"
+    }
+  },
   "consumes": [
     "application/json",
     "application/x-www-form-urlencoded"
@@ -52,6 +61,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -64,6 +76,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -109,8 +127,8 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -134,5 +152,12 @@
         }
       }
     }
-  }
+  },
+  "security": [
+    {
+      "Bearer": [
+        "./routes/*.js"
+      ]
+    }
+  ]
 }
